--- a/p2.html
+++ b/p2.html
@@ -20,5 +20,6 @@
 My bad traits are<ol>
 <li>Overthinking</li><li>Overtalk</li><li>Disturbed</li></ol>
 For further information visit <a href ="https://www.facebook.com/t.aerack">My profile </a></em></p>
+<video src= "IMG_3976.MOV" width="300" height=200>Video fun</video>
 </body>
 </html>
